--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <section class="container-fluid bg-scuro pt-5 pb-5 mt-0 overflow-hidden  ">
   <div class="row d-flex justify-content-evenly pb-5">
     <div class="col-12 col-md-8 col-lg-3 d-flex justify-content-end img-section2 p-0" data-aos="zoom-out-up" data-aos-offset="800">
-      <img src="https://picsum.photos/300/506" width="100%" alt="">
+      <img src="https://picsum.photos/200" width="100%" alt="">
     </div>
     <div class="col-12 col-md-8 col-lg-3 d-flex flex-column pt-3 " data-aos="fade-left" data-aos-duration="800" data-aos-offset="800">
       <h3 class="text-color-h1 fs-1 text-center title-font">La Storia</h3>
@@ -127,7 +127,7 @@
     <p class="text-color-h1 fs-3 text-center text-font">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, culpa? Tenetur inventore suscipit quibusdam nihil impedit possimus sint repudiandae excepturi vero, ut repellendus? Illum autem, officiis quam animi magnam harum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, culpa? Tenetur inventore suscipit quibusdam nihil impedit possimus sint repudiandae excepturi vero, ut repellendus? Illum autem, officiis quam animi magnam harum.</p>
   </div>
   <div class="col-12 col-md-8 col-lg-3 d-flex justify-content-start img-section2 p-0 order-md-2 order-sm-1" data-aos="zoom-out-up" data-aos-offset="1200"> 
-    <img src="https://picsum.photos/300/507"   width="100%" alt="">
+    <img src="https://picsum.photos/201"   width="100%" alt="">
   </div>
 
 </div>
@@ -143,7 +143,7 @@
 <h2 class="text-center display-2 text-font testo-con-gradient pb-5">Nella nostra Cantina</h2>
   </div>
   
-  <div class="col-3 pt-5 d-flex justify-content-center">
+  <div class="col-12 col-md-3 col-lg-3 pt-5 d-flex justify-content-center">
     <div class="card img-section3 bg-scuro" style="width: 18rem;">
       <img src="https://picsum.photos/200" class="card-img-top" alt="...">
       <div class="card-body ">
@@ -152,7 +152,7 @@
     </div>
   </div>
 
-  <div class="col-3 pt-5 d-flex justify-content-center">
+  <div class="col-12 col-md-3 col-lg-3 pt-5 d-flex justify-content-center">
     <div class="card img-section3 bg-scuro" style="width: 18rem;">
       <img src="https://picsum.photos/201" class="card-img-top" alt="...">
       <div class="card-body">
@@ -161,7 +161,7 @@
     </div>
   </div>
 
-  <div class="col-3 pt-5 d-flex justify-content-center ">
+  <div class="col-12 col-md-3 col-lg-3 pt-5 d-flex justify-content-center ">
     <div class="card img-section3 bg-scuro " style="width: 18rem;">
       <img src="https://picsum.photos/202" class="card-img-top" alt="...">
       <div class="card-body">
@@ -171,7 +171,7 @@
   </div>
 <div class="row pt-5">
   <div class="col-12 d-flex justify-content-center">
-    <a href="" class="link-shop"><h1 class="text-center">
+    <a href="./index2.html" class="link-shop"><h1 class="text-center">
       Visita il nostro shop..
     </h1></a>
   </div>
@@ -197,25 +197,23 @@
     <!-- Left -->
 
     <!-- Right -->
-    <div>
+    <div class="text-center">
       <a href="" class="me-4 text-reset">
-        <i class="bi bi-facebook"></i>
+        <i class="bi fs-1 bi-facebook"></i>
       </a>
       <a href="" class="me-4 text-reset">
-        <i class="bi bi-instagram"></i>
+        <i class="bi fs-1 bi-instagram"></i>
       </a>
       <a href="" class="me-4 text-reset">
-        <i class="bi bi-google"></i>
+        <i class="bi fs-1 bi-google"></i>
       </a>
       <a href="" class="me-4 text-reset">
-        <i class="bi bi-linkedin"></i>
+        <i class="bi fs-1 bi-linkedin"></i>
       </a>
       <a href="" class="me-4 text-reset">
-        <i class="bi bi-github"></i>
+        <i class="bi fs-1 bi-github"></i>
       </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-github"></i>
-      </a>
+      
     </div>
     <!-- Right -->
   </section>
